[package]
name = "wms-gateway"
version = "0.1.0"
authors = ["Mirza Adipradhana <madipradhana@gmail.com>"]
publish = false

[dependencies]
rocket = "0.4.0-rc.1"
serde = "1.0.80"
serde_json = "1.0.33"
serde_derive = "1.0.80"

[dependencies.rocket_contrib]
version = "0.4.0-rc.1"
default-features = false
features = ["json"]
