[package]
name = "rust-rocket-mqtt"
version = "0.1.0"
authors = ["Mirza Adipradhana <madipradhana@gmail.com>"]
publish = false

[dependencies]
env_logger = "0.6.0"
log = "0.4.6"
mac_address = "1.0.0"
mqtt-protocol = "0.6"
toml = "0.4.5"
rocket = "0.4.0-rc.1"
serde = "1.0.80"
serde_json = "1.0.33"
serde_derive = "1.0.80"
time = "0.1.40"
uuid = { version = "0.7.1", features = ["v4"] }

[dependencies.rocket_contrib]
version = "0.4.0-rc.1"
default-features = false
features = ["json"]
